@@ -1,8 +1,8 @@
 /*
-  $NiH: zip_get_name.c,v 1.11 2004/11/30 22:19:37 wiz Exp $
+  $NiH: zip_get_name.c,v 1.12 2004/11/30 23:02:46 wiz Exp $
 
   zip_get_name.c -- get filename for a file in zip file
-  Copyright (C) 1999, 2003, 2004 Dieter Baron and Thomas Klausner
+  Copyright (C) 1999, 2003, 2004, 2005 Dieter Baron and Thomas Klausner
 
   This file is part of libzip, a library to manipulate ZIP archives.
   The authors can be contacted at <nih@giga.or.at>
@@ -56,8 +56,14 @@ _zip_get_name(struct zip *za, int idx, int flags, struct zip_error *error)
 	return NULL;
     }
 
-    if ((flags & ZIP_FL_UNCHANGED) == 0 && za->entry[idx].ch_filename)
-	return za->entry[idx].ch_filename;
+    if ((flags & ZIP_FL_UNCHANGED) == 0) {
+	if (za->entry[idx].state == ZIP_ST_DELETED) {
+	    _zip_error_set(error, ZIP_ER_DELETED, 0);
+	    return NULL;
+	}
+	if (za->entry[idx].ch_filename)
+	    return za->entry[idx].ch_filename;
+    }
 
     if (za->cdir == NULL || idx >= za->cdir->nentry) {
 	_zip_error_set(error, ZIP_ER_INVAL, 0);
